src/app/product-detail/product-detail.component.scss
@import "./../../app/styles/colors.scss";

.detail-item-container {
  background-color: $meli-white;
  display: flex;
  justify-content: space-between;
  padding: 20px;
}

.detail-picture {
  height: 500px;
  width: 500px;
  margin-bottom: 30px;
}

.product-description {
  color: $meli-grey-text;
  p {
    max-width: 800px;
  }
}

.buy-section {
  width: 250px;
  .small-title {
    margin-bottom: 2px;
  }
  .regular-title {
    font-size: 20px;
    line-height: 24px;
    font-weight: 500;
    margin-bottom: 5px;
  }
  button.btn {
    margin-top: 20px;
    width: 100%;
  }
}

